2016-02-26  Thorsten Kukuk  <kukuk@thkukuk.de>

	* scripts/ypMakefile.in (netid.byname): Don't rebuild map
	on every make call if /etc/netid is missing.

2016-02-26  Matt Dainty  <matt@bodgit-n-scarper.com>

	* scripts/ypinit.in: Don't double-prefix awk variables.

2016-02-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* lib/Makefile.am: Replace libnis with libnsl.
	* makedbm/Makefile.am: Likewise.
	* mknetid/Makefile.am: Likewise.
	* revnetgroup/Makefile.am: Likewise.
	* rpc.yppasswdd/Makefile.am: Likewise.
	* rpc.ypxfrd/Makefile.am: Likewise.
	* yphelper/Makefile.am: Likewise.
	* yppush/Makefile.am: Likewise.
	* ypserv/Makefile.am: Likewise.
	* ypxfr/Makefile.am: Likewise.

	* ypserv/ypserv.c (ypprog_2): Add YPPROC_NEWXFR.
	* lib/yp.h: Likewise.
	* yppush/yppush.c: Try YPPROC_NEWXFR first.
	* ypserv/server.c: Implement ypproc_newxfr support.

2015-04-14  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.7

	* yppush/yppush.c: Register callback function correct for IPv4 and
	IPv6, enable --port option again.

	* ypxfr/ypxfr.c (main): In debug case log remote parameters.

2015-04-13  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.6

	* yppush/yppush.c: register callback for IPv6, too.

2015-03-31  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.5

	* rpc.yppasswdd/update.c: Remove pmap_clnt.h header include.
	* rpc.ypxfrd/ypxfrd_svc.c: Likewise.
	* rpc.ypxfrd/ypxfrd.c: Replace pmap_* functions with svc_unreg.

	* yppush/yppush.c: Replace svc_unregister with svc_unreg.

2015-03-30  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.4

	* yppush/yppush.c (yppush_foreach): Use svc_reg instead
	of svc_register.

2015-03-13  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.3

	* ypserv/server.c: Adjust debug output for IP with port to avoid
	misinterpretions with IPv6.

	* yppush/yppush.c (yppush_foreach): Call clnt_create().

2015-01-15  Thorsten Kukuk  <kukuk@thkukuk.de>

	* rpc.yppasswdd/yppasswdd.c (main): Fix -v/--version